err.out
  File "main.py", line 40
    while 1:
        ^
SyntaxError: invalid syntax
